--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "chai-as-promised": "~5.1.0",
     "dockerode": "~2.2.2",
     "eslint": "^3.7.1",
+    "jsdoc": "^3.4.3",
     "mocha": "*",
     "xunit-file": "^0.0.7"
   },
   "scripts": {
     "postinstall": "bower install",
     "build": "mkdir -p dist && ./node_modules/.bin/browserify src/tcf.js -s tcf -i atob -i btoa -i ./src/server.js -i ./src/channel_server_ws.js > dist/tcf.js",
-    "test": " ./node_modules/.bin/mocha --reporter spec --full-trace test/**/*.js"
+    "test": " ./node_modules/.bin/mocha --reporter spec --full-trace test/**/*.js",
+    "doc": "./node_modules/.bin/jsdoc -r src/tcf.js src/channel.js src/protocol.js src/client.js src/server.js -R ./README.md -d ./doc/"
   }
 }
